--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,28 @@
 :root {
-  --orange-color: #6f7dfb;
+  --orange-color: #da722c;
   --dark-blue-color: #023047;
   --dark-color: #070917;
   --light-color: #e8f7fb;
   --light-blue-color: #6f7dfb;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+.btn {
+  padding: 16px 32px;
+  border-radius: 24px;
+  color: #fff;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 27px;
 }
