--- a/Css/style.css
+++ b/Css/style.css
@@ -17,6 +17,32 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+header {
+  background: linear-gradient(180deg, #6F7DFB 0%, #26308C 100%);
+  height: 100vh;
+  width: 100%;
+}
+
+.wrapper{
+  max-width: 1134px;
+  margin: 0 auto;
+  /* background-color: red; */
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+
+}
+nav .logo{
+  font-family: 'Raleway', sans-serif;
+font-weight: 900;
+font-size: 40px;
+color: #FFFFFF;
+}
+
+/* button */
+
 .btn {
   padding: 16px 32px;
   border-radius: 24px;
@@ -25,4 +51,25 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 27px;
+  position: relative;
+}
+
+.btn.dark{
+  background-color: var(--dark-blue-color);
+}
+
+.btn.light{
+  background-color: var(--orange-color);
+}
+
+.btn.enrol-icon::before{
+  content: url('Img/Enroll-icon.svg');
+position: absolute;
+top: 50%;
+left: 32px;
+transform: translateY(-50%);
+}
+
+.btn.enrol-icon {
+  padding-left: 60px;
 }
